--- a/app/src/main/res/layout/beacon_adapter_item.xml
+++ b/app/src/main/res/layout/beacon_adapter_item.xml
@@ -5,13 +5,13 @@
     android:layout_height="wrap_content"
     >
     <TextView
-        android:id="@android:id/text1"
+        android:id="@+id/signalAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
 
     <TextView
-        android:id="@android:id/text2"
+        android:id="@+id/signalData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
