--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_weight="1"></ListView>
+            <fragment android:name="com.kcasareo.application.HistoryFragment"
+                android:id="@+id/history_fragment"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
