Working on history fragment layout

--- a/app/src/main/res/layout/graph.xml
+++ b/app/src/main/res/layout/graph.xml
@@ -11,6 +11,8 @@
         android:layout_marginTop="3dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent">
+        
+    </com.kcasareo.application.Graph>
 
 </RelativeLayout>
