--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -7,6 +7,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <TextView android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:text="History"
+            android:textAlignment="center"
+            android:textSize="12pt">
+
+        </TextView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
