--- a/app/src/main/res/layout/scanner.xml
+++ b/app/src/main/res/layout/scanner.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+    <!--fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.kcasareo.application.ScannerFragment"
+        android:id="@+id/scanner_fragment"-->
+        <ListView
+            android:id="@+id/listview_rssi"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+        </ListView>
+    <!--/fragment-->
 
 </LinearLayout>
