Working listview. Now working on position editing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,20 +19,29 @@
                 android:layout_gravity="center"
                 >
                 <Button
+                    android:id="@+id/button_history"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="History"/>
                 <Button
+                    android:id="@+id/button_map"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Map"/>
                 <Button
+                    android:id="@+id/button_scanner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Scanner"/>
+                <Button
+                    android:id="@+id/button_positions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Positions"/>
             </LinearLayout>
 
             <!--ListView
@@ -46,6 +55,7 @@
                 android:id="@+id/fragment_container"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent">
+
             </FrameLayout>
 
         </LinearLayout>
