--- a/app/src/main/res/layout/scanner.xml
+++ b/app/src/main/res/layout/scanner.xml
@@ -2,17 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-    <!--fragment
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+                        >
+        </ListView>
+        <TextView android:id="@id/android:empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.kcasareo.application.ScannerFragment"
-        android:id="@+id/scanner_fragment"-->
-        <ListView
-            android:id="@+id/listview_rssi"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-        </ListView>
-    <!--/fragment-->
-
+        android:text="No data"/>
 </LinearLayout>
