--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@android:color/white">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
         <TextView android:layout_height="50dp"
             android:layout_width="match_parent"
             android:text="History"
             android:textAlignment="center"
-            android:textSize="12pt">
-
+            android:textSize="12pt"
+            >
         </TextView>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            >
             <Button
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -36,6 +39,18 @@
             </Button>
         </LinearLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Test"
+            android:textSize="12dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Test"
+            android:textSize="12dp"
+            android:layout_weight="1"/>
     </LinearLayout>
 
 </RelativeLayout>
