--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -37,16 +37,38 @@
                 android:layout_weight="1"
                 android:text="Next"
                 android:id="@+id/history_button_next">
-
+            </Button>
+            <Button android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@android:color/darker_gray"
+                android:layout_weight="1"
+                android:text="Latest"
+                android:id="@+id/history_button_latest">
             </Button>
         </LinearLayout>
-        <Button
-            android:layout_height="50dp"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:text="Update"
-            android:id="@+id/history_button_update"
-            >
-        </Button>
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Index:"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/history_text_index"/>
+            <Button
+                android:layout_height="50dp"
+                android:layout_width="match_parent"
+                android:text="Update"
+                android:id="@+id/history_button_update"
+                android:layout_weight="3">
+            </Button>
+        </LinearLayout>
+
         <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
@@ -55,7 +77,8 @@
         <TextView
             android:id="@id/android:empty"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:text="No Data"/>
     </LinearLayout>
 
 </RelativeLayout>
