--- a/app/src/main/res/layout/history_adapter_item.xml
+++ b/app/src/main/res/layout/history_adapter_item.xml
@@ -18,6 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="3"/>
+        <TextView
+            android:id="@+id/history_item_db"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"/>
 
     </LinearLayout>
     <!--Bottom Lane-->
@@ -33,11 +38,13 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
+
         <EditText
             android:id="@+id/history_item_edit_x"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="3"/>
+            android:layout_weight="3"
+            android:padding="1dp" />
         <TextView
             android:text="Y:"
             android:textSize="15dp"
@@ -49,7 +56,8 @@
             android:id="@+id/history_item_edit_y"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="3"/>
+            android:layout_weight="3"
+            android:padding="1dp"/>
     </LinearLayout>
 
 </LinearLayout>
