--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -85,6 +85,7 @@
             android:orientation="vertical"
             android:layout_weight="1">
             <ListView
+                android:descendantFocusability="afterDescendants"
                 android:id="@android:id/list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
