--- a/app/src/main/res/layout/history_adapter_item.xml
+++ b/app/src/main/res/layout/history_adapter_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="100dp"
+    android:descendantFocusability="afterDescendants">
     <!--Top Lane, Address, DB, update button-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1">
         <TextView
@@ -27,37 +28,61 @@
     </LinearLayout>
     <!--Bottom Lane-->
     <LinearLayout
+        android:descendantFocusability="afterDescendants"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal">
-        <TextView
-            android:text="X: "
-            android:textSize="15dp"
-            android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
+        <LinearLayout
 
-        <EditText
-            android:id="@+id/history_item_edit_x"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:padding="1dp" />
-        <TextView
-            android:text="Y:"
-            android:textSize="15dp"
-            android:textAlignment="center"
-            android:layout_width="wrap_content"
+            android:layout_weight="1">
+            <TextView
+                android:text="X: "
+                android:textSize="15dp"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <EditText
+                android:id="@+id/history_item_edit_x"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:padding="2dp"
+                android:inputType="numberDecimal"
+                android:digits="0123456789."
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:imeOptions="actionDone"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
-        <EditText
-            android:id="@+id/history_item_edit_y"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:padding="1dp"/>
+            android:layout_weight="1">
+            <TextView
+                android:text="Y:"
+                android:textSize="15dp"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <EditText
+                android:id="@+id/history_item_edit_y"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:padding="2dp"
+                android:inputType="numberDecimal"
+                android:digits="0123456789."
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:imeOptions="actionDone"
+                />
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
