--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -51,33 +51,47 @@
             android:layout_height="50dp"
             android:orientation="horizontal">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0px"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:padding="2dp">
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="0px"
                     android:layout_weight="1"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:text="Index: "
                     />
                 <TextView
                     android:id="@+id/history_text_index"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="0px"
                     android:layout_weight="1"
                     android:text=" "
-                    android:textSize="20dp"/>
+                    android:textSize="15dp"/>
             </LinearLayout>
             <Button
-                android:layout_height="50dp"
-                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_width="0px"
                 android:text="Update"
                 android:id="@+id/history_button_update"
                 android:layout_weight="3">
             </Button>
+            <EditText
+                android:id="@+id/history_edit_x"
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:digits="0123456789.-"
+                android:inputType="numberDecimal|numberSigned"/>
+            <EditText
+                android:id="@+id/history_edit_y"
+                android:layout_width="0px"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:digits="0123456789.-"
+                android:inputType="numberDecimal|numberSigned"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -85,8 +99,8 @@
             android:orientation="vertical"
             android:layout_weight="1">
             <ListView
-                android:descendantFocusability="afterDescendants"
                 android:id="@android:id/list"
+                android:descendantFocusability="afterDescendants"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </ListView>
