--- a/app/src/main/res/layout/history_adapter_item.xml
+++ b/app/src/main/res/layout/history_adapter_item.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="100dp"
     android:descendantFocusability="afterDescendants">
+
     <!--Top Lane, Address, DB, update button-->
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,7 +35,7 @@
         android:layout_weight="1"
         android:orientation="horizontal">
         <LinearLayout
-
+            android:descendantFocusability="afterDescendants"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -44,42 +45,35 @@
                 android:textAlignment="center"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"/>
-            <EditText
-                android:id="@+id/history_item_edit_x"
+                android:layout_weight="1"
+                android:focusable="false"/>
+            <TextView
+                android:id="@+id/history_item_read_x"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
-                android:padding="2dp"
-                android:inputType="numberDecimal"
-                android:digits="0123456789."
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:imeOptions="actionDone"
+
                 />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:descendantFocusability="afterDescendants">
             <TextView
                 android:text="Y:"
                 android:textSize="15dp"
                 android:textAlignment="center"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"/>
-            <EditText
-                android:id="@+id/history_item_edit_y"
+                android:layout_weight="1"
+                android:focusable="false"/>
+            <TextView
+                android:id="@+id/history_item_read_y"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
-                android:padding="2dp"
-                android:inputType="numberDecimal"
-                android:digits="0123456789."
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:imeOptions="actionDone"
+
                 />
         </LinearLayout>
 
