--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -127,6 +127,7 @@
             android:orientation="horizontal"
             android:layout_weight="2">
             <ToggleButton
+                android:id="@+id/history_toggle_localise"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:layout_weight="1"
