--- a/app/src/main/res/layout/scanner_fragment.xml
+++ b/app/src/main/res/layout/scanner_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:name="com.LocaliseFramework.application.ScannerFragment"
+    android:name="com.BeaconManager.application.ScannerFragment"
     android:id="@+id/scanner_fragment"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
