--- a/app/src/main/res/layout/history_adapter_item.xml
+++ b/app/src/main/res/layout/history_adapter_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:descendantFocusability="afterDescendants">
+    android:descendantFocusability="afterDescendants"
+    android:background="@color/menu_highlight">
 
     <!--Top Lane, Address, DB, update button-->
     <LinearLayout
